[subresource_filter] Fix devtools toggle with site isolation

Multiple PageHandlers can be created with isolating subframes. This
breaks the devtools toggle which expects a single PageHandler for the
main frame.

This CL adds a bit to the PageHandler which classifies whether it is
for the main frame. If it is not, then it cannot change the filtering
toggle.

Bug: 813197
Change-Id: I7698985822f5ee159399bd1d37884436c5278d0b
Reviewed-on: https://chromium-review.googlesource.com/939602
Reviewed-by: Pavel Feldman <pfeldman@chromium.org>
Commit-Queue: Charlie Harrison <csharrison@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#540185}
Cr-Mirrored-From: https://chromium.googlesource.com/chromium/src
Cr-Mirrored-Commit: c84985897c2695ca31245d44c30e92abcbbefa45